@startuml
'https://plantuml.com/class-diagram

'Sorry this looks terrible; bad solution = bad uml
class ToDoListMain {
    main()
    start()
}

class ToDoListController {
    - @FXML mainPane: BorderPane
    - @FXML splitPane: SplitPane
    - @FXML errorLabel: Label
    - @FXML selectDate: DatePicker
    - @FXML editDate: DatePicker
    - @FXML descriptionText: TextField
    - @FXML editDescription: TextField
    - @FXML addButton: Button
    - @FXML deleteButton: Button
    - @FXML markCompleteButton: Button
    - @FXML editTaskButton: Button
    - @FXML clearButton: Button
    - @FXML taskList: ListView<NewTask>
    - @FXML completedList: ListView<NewTask>
    + curTask: NewTask
    + list: ObservableList<NewTask>
    + completed: ObservableList<NewTask>

    + @FXML initialize(ActionEvent)
    + @FXML saveToExternal(ActionEvent)
    + @FXML loadFromExternal(ActionEvent)
    + @FXML displayAll(ActionEvent)
    + @FXML displayComplete(ActionEvent)
    + @FXML displayIncomplete(ActionEvent)
    + @FXML addButtonClicked(ActionEvent)
    + @FXML deleteButtonClicked(ActionEvent)
    + @FXML markTaskCompleteClicked(ActionEvent)
    + @FXML editButtonClicked(ActionEvent)
    + @FXML clearButtonClicked(ActionEvent)
    + @FXML confirmEditClicked(ActionEvent)
    + printError(String)
    + readDate(ArrayList<String>, int): LocalDate
    + readDescription(ArrayList<String>, int): String

}

class NewTask {
    - date: LocalDate
    - description: String
    - isComplete: boolean

    + NewTask(description, date)
    + getDate(): LocalDate
    + setDate(date)
    + getDescription(): String
    + setDescription(description)
    + isCompleted(): boolean
    + setCompleted(isComplete)
}

class AddTask {
    + addNewTask(taskList, descriptionText, selectDate, errorLabel, list, curTask)
    + inputIsValid(errorLabel, descriptionText, selectDate): boolean
    + commitNewTask(errorLabel, taskList, descriptionText, selectDate, list, curTask)
    + errorMessage(errorLabel, String)
}

class DeleteTask {
    + deleteSelectedTask(list, taskList, completed, completedList)
}

class MarkComplete {
    + markTaskComplete(list, taskList, completedList, completed)
}

class DisplayList {
    + displayAll(splitPane)
    + displayComplete(splitPane)
    + displayIncomplete(splitPane)
}

class ClearList {
    + clearAll(list, taskList, completedList, completed)
}

class EditTask {
    + editCurTask(descriptionText, selectDate, curTask)
}

class SaveList {
    + saveFile(): String
    + writeToFile(String, list, completed)
}

class LoadList {
    + loadFile(): String
    + readToDoTasks(String): ArrayList<String>
    + readCompleteTasks(String): ArrayList<String>
}

javafx.Application <|-- ToDoListMain
ToDoListMain - ToDoListController
ToDoListController - AddTask
ToDoListController -- DeleteTask
ToDoListController -- MarkComplete
ToDoListController -- EditTask
ToDoListController - ClearList
ToDoListController - DisplayList
ToDoListController - SaveList
ToDoListController - LoadList
ToDoListController o--- NewTask
NewTask --- AddTask
NewTask --- DeleteTask
NewTask --- MarkComplete
NewTask - EditTask
NewTask --- ClearList
NewTask - SaveList

@enduml